@@ -14,10 +14,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -40,26 +41,39 @@ class InstructorAssignmentServiceTest {
 
     @Test
     void testAssignInstructorsToTeams() {
-        // Given
-        Long instructorId = 1L;
-        Long teamId = 1L;
+        // Mocking Data
         Instructor instructor = new Instructor();
-        instructor.setId(instructorId);
+        instructor.setId("instructorId");
         SeniorDesignTeam team = new SeniorDesignTeam();
-        team.setId(teamId);
-
-        when(instructorRepository.findById(String.valueOf(instructorId))).thenReturn(Optional.of(instructor));
-        when(seniorDesignTeamRepository.findById(teamId)).thenReturn(Optional.of(team));
+        team.setId("teamId");
+        Assignment assignment = new Assignment("teamId", "instructorId");
 
         SeniorDesignTeamDto dto = new SeniorDesignTeamDto();
-        dto.setAssignments(List.of(new SeniorDesignTeamDto.Assignment(instructorId, teamId)));
+        dto.setAssignments(Arrays.asList(assignment));
 
-        // When
+        when(instructorRepository.findById("instructorId")).thenReturn(Optional.of(instructor));
+        when(seniorDesignTeamRepository.findById("teamId")).thenReturn(Optional.of(team));
+
+        // Action
         service.assignInstructorsToTeams(dto);
 
-        // Then
-        verify(seniorDesignTeamRepository).save(teamCaptor.capture());
-        SeniorDesignTeam savedTeam = teamCaptor.getValue();
-        assertEquals(instructorId, savedTeam.getInstructor().getId());
+        // Verification
+        assertTrue(team.getInstructors().contains(instructor));
+        verify(seniorDesignTeamRepository).save(team);
+    }
+
+    @Test
+    void testAssignInstructorsToTeams_InstructorOrTeamNotFound() {
+        SeniorDesignTeamDto.Assignment assignment = new SeniorDesignTeamDto.Assignment("teamId", "invalidInstructorId");
+        SeniorDesignTeamDto dto = new SeniorDesignTeamDto();
+        dto.setAssignments(Arrays.asList(assignment));
+
+        when(instructorRepository.findById("invalidInstructorId")).thenReturn(Optional.empty());
+        when(seniorDesignTeamRepository.findById("teamId")).thenReturn(Optional.of(new SeniorDesignTeam()));
+
+        // Expecting an exception due to not finding the instructor
+        Exception exception = assertThrows(RuntimeException.class, () -> service.assignInstructorsToTeams(dto));
+
+        assertTrue(exception.getMessage().contains("Instructor or Team not found"));
     }
 }
